--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "framer-motion": "^4",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swiper": "^6.5.7"
   },
   "devDependencies": {
     "@types/faker": "^5.5.3",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "sass": "^1.32.11",
     "typescript": "^4.2.4"
   }
 }
