--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.21.1",
+    "country-flag-icons": "^1.2.9",
     "faker": "^5.5.3",
     "framer-motion": "^4",
     "next": "10.1.3",
@@ -21,6 +22,7 @@
     "swiper": "^6.5.7"
   },
   "devDependencies": {
+    "@types/country-flag-icons": "^1.2.0",
     "@types/faker": "^5.5.3",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
